Replace Portal Web with Login page
Cambio del dominio web app para que sea un log in que redirija a la aplicacion correcta dependiendo del usuario que ingresa

--- a/index.html
+++ b/index.html
@@ -1,30 +1,118 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portal Web</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Login</title>
+
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: url("https://drive.google.com/uc?id=14RkcRR5ntgvlASmOtEI0mex6jCOXNBm9");
+        background-size: cover;
+        background-position: center;
     }
-    iframe {
-      border: none;
-      width: 100%;
-      height: 100%;
+
+    .login-box {
+        width: 350px;
+        background: rgba(255, 255, 255, 0.92);
+        padding: 40px;
+        border-radius: 12px;
+        box-shadow: 0 5px 25px rgba(0,0,0,0.3);
+        text-align: center;
+        backdrop-filter: blur(4px);
     }
-  </style>
+
+    .login-box img {
+        width: 80px;
+        margin-top: -80px;
+    }
+
+    .login-box h2 {
+        margin-bottom: 20px;
+        color: #222;
+    }
+
+    input {
+        width: 100%;
+        padding: 12px;
+        margin: 10px 0;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        font-size: 15px;
+    }
+
+    button {
+        width: 100%;
+        padding: 12px;
+        background: #8a008a;
+        border: none;
+        color: white;
+        font-size: 16px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background: #6b006b;
+    }
+
+    .error {
+        color: red;
+        margin-top: 10px;
+        font-size: 14px;
+    }
+</style>
+
 </head>
 <body>
-  <iframe 
-    src="https://apps.powerapps.com/play/e/default-efc5244d-9097-49ad-8da5-533610e5d713/a/df06e018-c4df-4eb6-b35a-13de98be4df8?tenantId=efc5244d-9097-49ad-8da5-533610e5d713&hint=8d447147-6f8b-4c8d-a9bc-911e3e42c70e&sourcetime=1758749098276&hidenavbar=true" 
-    allowfullscreen>
-  </iframe>
-</body>
 
+<div class="login-box">
+    <img src="https://drive.google.com/uc?id=1Y5hnLBjBHfESZRKdBQbX0z7auZXxZywN" alt="avatar">
+    <h2>INICIAR SESIÓN</h2>
+
+    <input type="text" id="user" placeholder="Usuario">
+    <input type="password" id="pass" placeholder="Contraseña">
+
+    <button onclick="login()">Ingresar</button>
+    <p id="error" class="error"></p>
+</div>
+
+<script>
+    function login() {
+        let user = document.getElementById("user").value.trim();
+        let pass = document.getElementById("pass").value.trim();
+        let error = document.getElementById("error");
+
+        // Lista de usuarios válidos con su contraseña y destino
+        const users = {
+            "LICHOS": { pass: "1234", url: "https://bintelligence-gt.github.io/lichosdash/" },
+            "Administrador": { pass: "1234", url: "https://bintelligence-gt.github.io/maps/" },
+            "Invitado": { pass: "1234", url: "https://google.com/" }
+        };
+
+        if (users[user] && users[user].pass === pass) {
+            window.location.href = users[user].url;
+        } else {
+            error.innerHTML = "Usuario o contraseña incorrectos";
+        }
+    }
+
+    // Permitir Enter
+    document.addEventListener("keydown", function(e){
+        if(e.key === "Enter"){
+            login();
+        }
+    });
+</script>
+
+</body>
 </html>
+
 
 
