--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url("https://drive.google.com/uc?id=14RkcRR5ntgvlASmOtEI0mex6jCOXNBm9");
+        background-image: url("Massive X-16x9 Blue Stripe.png");
         background-size: cover;
         background-position: center;
     }
@@ -73,7 +73,7 @@
 <body>
 
 <div class="login-box">
-    <img src="https://drive.google.com/uc?id=1Y5hnLBjBHfESZRKdBQbX0z7auZXxZywN" alt="avatar">
+    <img src="avatar.jpg" alt="avatar">
     <h2>INICIAR SESIÓN</h2>
 
     <input type="text" id="user" placeholder="Usuario">
@@ -113,6 +113,7 @@
 
 </body>
 </html>
+
 
 
 
