Fix HTML encoding and improve styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         width: 100%;
         padding: 12px;
         margin: 10px 0;
-        border-radius: 5px;
+        border-radius: 12px;
         border: 1px solid #ccc;
         font-size: 15px;
     }
@@ -54,7 +54,7 @@
         border: none;
         color: white;
         font-size: 16px;
-        border-radius: 5px;
+        border-radius: 12px;
         cursor: pointer;
     }
 
@@ -65,7 +65,7 @@
     .error {
         color: red;
         margin-top: 10px;
-        font-size: 14px;
+        font-size: 18px;
     }
 </style>
 
@@ -74,7 +74,7 @@
 
 <div class="login-box">
     <img src="avatar.jpg" alt="avatar">
-    <h2>INICIAR SESIÓN</h2>
+    <h2>Iniciar Sesión</h2>
 
     <input type="text" id="user" placeholder="Usuario">
     <input type="password" id="pass" placeholder="Contraseña">
@@ -113,6 +113,7 @@
 
 </body>
 </html>
+
 
 
 
